# pyRTE-RRTMGP

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  0001-Fix-syntax-errors-in-rte_kernels.h.patch  0001-Update-tests-Makefile-to-generate-an-.so-file-that-w.patch  CIATATION.cff  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Contributing.md  LICENSE  Makefile  README.md  build_rte_rrtmgp.sh  check_binds.py  compile_fortran.sh  dev-environment.yml  environment-notebook-scripts.yml  environment.yml  example-notebooks-interactive.yml  example-notebooks-scripts.yml  fcompile.sh  fortran_interface.h  lw_rce.py  main.cpp  mypy.ini  pybind_interface.cpp  pyproject.toml  run.sh  setup.py  setup.sh  test.F90  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda.yml  deploy-docs.yml  mypy.yml  pip_install.yml  run-example-notebooks.yml  test_docs_build.yml
conda.recipe/: meta.yaml
docs/: environment-docs.yml  requirements-docs.txt
docs/source/: conf.py  index.rst  release_guide.md
docs/source/contributor_guide/: contribute.md  fortran-compatibility.md  roadmap.md
docs/source/explanation/: usage.md
docs/source/how_to/: installation-local-dev.md  installation.md
docs/source/reference/: low_level_kernel_modules.rst  pyrte_rrtmgp_python_modules.rst
docs/source/reference_guide/: pyrte_rrtmgp.rst  pyrte_rrtmgp_low_level.md  pyrte_rrtmgp_python_modules.rst
docs/source/tutorials/: tutorials.md
docs/source/user_guide/: installation.md  usage.md
examples/: README.md  Tutorials.md  all_sky_example.ipynb  all_sky_example.md  all_sky_example.py  all_sky_example_2.ipynb  cloud_optics_example.py  create-virtual-zaar.py  fetch-DYAMOND-data.py  lw_dask_example.ipynb  lw_dask_example.py  lw_example.ipynb  lw_example.py  lw_noscat.ipynb  myst.yml  pyRTE-quick-start.ipynb  pyRTE-quick-start.md  pyRTE-quick-start.py  pyRTE-scaling.ipynb  pyRTE-scaling.py  rfmip-clear-sky.ipynb  rfmip-clear-sky.md  rfmip-clear-sky.py  rrtmgp.ipynb  rte.ipynb  rte.py  rte_rrtmgp.ipynb  rte_rrtmgp_lw.ipynb  rte_rrtmgp_sw.ipynb  sw_example.ipynb  sw_example.py  sw_noscat.ipynb  sw_python.ipynb
examples/dyamond3-example/: environment-dev.yml  environment.yml  pyRTE-scaling.ipynb  pyRTE-scaling.py
examples/dyamond_clouds/: cloud_optics_example.py  create-virtual-zaar.py  dask.ipynb  dyamond-clouds-environment.yml  example.ipynb  example.py
pyrte_rrtmgp/: __init__.py  all_skys_funcs.py  atmospheric_data.py  cli.py  config.py  constants.py  data_types.py  data_validation.py  examples.py  exceptions.py  external_data_helpers.py  gas_optics.py  rrtmgp.py  rrtmgp_cloud_optics.py  rrtmgp_data.py  rrtmgp_data_files.py  rrtmgp_gas_optics.py  rte.py  rte_examples.py  rte_problems.py  rte_solver.py  utils.py
pyrte_rrtmgp/kernels/: rrtmgp.py  rte.py
pyrte_rrtmgp/rrtmgp/: __init__.py  data_files.py  examples.py  utils.py
pyrte_rrtmgp/ssm/: __init__  __init__.py  default.py  defaults.py  gas_optics.py  kernels.py  test_gas_optics.py
pyrte_rrtmgp/tests/: __init__.py  requirements-test.txt  test_basic_functionality.py  test_cld_lw_solver.py  test_cld_sw_solver.py  test_data_validation.py  test_exported_functions.py  test_lw_solver.py  test_rfmip_clear_sky.py  test_rfmip_clear_sky_lw.py  test_rfmip_clear_sky_sw.py  test_rte_examples.py  test_ssm_gas_optics.py  test_sw_solver.py
pyrte_rrtmgp/tests/lw_solver_test/2stream_test/: lw_solver_2stream_test.py
pyrte_rrtmgp/tests/lw_solver_test/noscat_test/: lw_solver_input.json  lw_solver_noscat_test.py  lw_solver_output.npy
pyrte_rrtmgp/tests/rrtmgp_compute_Planck_source_test/: compute_Planck_source_test.py
pyrte_rrtmgp/tests/rrtmgp_compute_tau_absorption_test/: compute_tau_absorption_test.py
pyrte_rrtmgp/tests/rrtmgp_compute_tau_rayleigh_test/: rrtmgp_compute_tau_rayleigh_test.py
pyrte_rrtmgp/tests/rrtmgp_interpolation_test/: interpolation_test.py
pyrte_rrtmgp/tests/sw_solver_test/2stream_test/: sw_2stream_input.json  sw_2stream_output.json  sw_solver_2stream_test.py
pyrte_rrtmgp/tests/test_python_frontend/: test_cld_lw_solver.py  test_cld_sw_solver.py  test_lw_solver.py  test_sw_solver.py  utils.py
pyrte_rrtmgp/tests/utils/: data_parser.py  zip.py
tests/: requirements-test.txt  test_exported_functions.py
tests/lw_solver_test/: lw_solver_noscat_parser.py  lw_solver_noscat_test.py
tests/lw_solver_test/noscat_test/: lw_solver_noscat_test.py  lw_solver_output.npy
tests/rrtmgp_compute_Planck_source_test/: compute_Planck_source_test.py
tests/test_python_frontend/: rld_Efx_RTE-RRTMGP-181204_rad-irf_r1i1p1f1_gn.nc  rlu_Efx_RTE-RRTMGP-181204_rad-irf_r1i1p1f1_gn.nc  rsd_Efx_RTE-RRTMGP-181204_rad-irf_r1i1p1f1_gn.nc  rsu_Efx_RTE-RRTMGP-181204_rad-irf_r1i1p1f1_gn.nc  test_gas_optics.py  test_lw_solver.py  test_sw_solver.py
