[project]
name = "pyrte_rrtmgp"
version = "0.1.2"
description = "A Python interface to the RTE+RRTMGP Fortran software package."
readme = "README.md"
requires-python = ">=3.11,<3.13"
# when updating the tested Python versions, please also update README.md,
# the conda.recipe/meta.yaml file, the conda.yml file for the GitHub Actions
# workflow, and (if necessary) the .readthedocs.yaml file
dependencies = [
  "numpy>=1.21.1",
  "xarray>=2023.5.0",
  "netcdf4>=1.7.2",
  "requests>=2.4.0",
  "pytest>=6.0.0"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
test = [
  "pytest>=6.0.0",
  "pytest-cov>=3.0",
  "numpy>=1.21.1",
  "xarray>=2023.5.0",
  "dask >=2023.5.0",
  "netcdf4>=1.7.2",
  "requests>=2.4.0"
]

[project.scripts]
pyrte_rrtmgp = "pyrte_rrtmgp.cli:main"

[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.args = [
    "-G", "Ninja"
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = ["error"]
testpaths = ["pyrte_rrtmgp/tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
build-verbosity = 1

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | pyrte_rrtmgp/tests/(?!test_python_frontend).*
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["pyrte_rrtmgp/tests/*"]
extend_skip_glob = ["!pyrte_rrtmgp/tests/test_python_frontend/*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "pyrte_rrtmgp/tests/*",
    "conda.recipe/*",
    "*.yaml",
    "*.yml"
]
per-file-ignores = "__init__.py:F401"
